--- a/decidim-core/app/views/layouts/decidim/_redesigned_decidim_javascript.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_decidim_javascript.html.erb
@@ -4,9 +4,9 @@
   <%= javascript_pack_tag "decidim_sw", defer: false %>
 <% end %>
 
-<%= content_for :js_content %>
+<%= yield :js_content %>
 
 <%= snippets.display(:foot) %>
-<%= content_for :header_snippets %>
+<%= yield :header_snippets %>
 
 <%= render partial: "layouts/decidim/cors" if Decidim.cors_enabled %>
