--- a/decidim-comments/app/cells/decidim/comments/comment/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/show.erb
@@ -35,24 +35,21 @@
         <% end %>
       </div>
     </div>
-    <%# REDESIGN_PENDING: add Turbo and refactor erb to count the size of replies %>
     <% if has_replies_in_children? %>
-      <% if replies.length >= 1 %>
-        <div data-component="accordion">
-          <div class="block text-center relative top-4 z-[1] -mt-8">
-            <button id="panel-trigger-<%= model.id %>-replies" class="button button__sm button__text-secondary bg-background px-2" data-controls="panel-<%= model.id %>-replies">
-              <span class="font-normal"><%= replies.length %> respostes</span>
-              <%= icon "arrow-down-s-line" %>
-              <%= icon "arrow-up-s-line" %>
-            </button>
-          </div>
-          <div class="comment-reply" id="panel-<%= model.id %>-replies">
-            <% replies.each do |reply| %>
-              <%= cell("decidim/comments/comment", reply, root_depth: root_depth, order: order, reloaded: reloaded?) %>
-            <% end %>
-          </div>
+      <div data-component="accordion">
+        <div class="block text-center relative top-4 z-[1] -mt-8">
+          <button id="panel-trigger-<%= model.id %>-replies" class="button button__sm button__text-secondary bg-background px-2" data-controls="panel-<%= model.id %>-replies">
+            <span class="font-normal"><%= t("replies", scope: "decidim.components.comment", count: replies.length) %></span>
+            <%= icon "arrow-down-s-line" %>
+            <%= icon "arrow-up-s-line" %>
+          </button>
         </div>
-      <% end %>
+        <div class="comment-reply" id="panel-<%= model.id %>-replies">
+          <% replies.each do |reply| %>
+            <%= cell("decidim/comments/comment", reply, root_depth: root_depth, order: order, reloaded: reloaded?) %>
+          <% end %>
+        </div>
+      </div>
     <% end %>
   <% end %>
 <% end %>
