--- a/decidim-comments/app/cells/decidim/comments/comment/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/show.erb
@@ -1,50 +1,48 @@
-<%= content_tag :div, id: "comment_#{model.id}", data: { comment_id: model.id } do %>
+<%= content_tag :div, id: "comment_#{model.id}", class: "comment", data: { comment_id: model.id } do %>
   <% if model.hidden? %>
     <%= render :moderation_data %>
   <% elsif model.deleted? %>
     <%= render :deletion_data %>
   <% else %>
-    <div class="comment">
-      <div class="comment__header">
-        <span class="font-bold">
-          <%== cell("decidim/redesigned_author", author_presenter).profile %>
+    <div class="comment__header">
+      <span class="font-bold">
+        <%== cell("decidim/redesigned_author", author_presenter).profile %>
+      </span>
+      <span class="text-gray-2 text-sm">
+        <%= time_tag created_at, l(created_at, format: :decidim_short) %>
+      </span>
+      <% if edited? %>
+        <span>
+          <%= t("decidim.components.comment.edited") %>
         </span>
-        <span class="text-gray-2 text-sm">
-          <%= time_tag created_at, l(created_at, format: :decidim_short) %>
-        </span>
-        <% if edited? %>
-          <span>
-            <%= t("decidim.components.comment.edited") %>
-          </span>
-        <% end %>
-        <%= render :utilities %>
+      <% end %>
+      <%= render :utilities %>
+    </div>
+    <div class="comment__content">
+      <%= alignment_badge %>
+      <%= comment_body %>
+    </div>
+    <div class="comment__footer" data-component="accordion">
+      <div class="comment__footer-grid">
+        <%= render :actions %>
+        <%= votes %>
       </div>
-      <div class="comment__content">
-        <%= alignment_badge %>
-        <%= comment_body %>
-      </div>
-      <div class="comment__footer" data-component="accordion">
-        <div class="comment__footer-grid">
-          <%= render :actions %>
-          <%= votes %>
+      <% if can_reply? %>
+        <div id="panel-<%= reply_id %>">
+          <%== cell("decidim/comments/comment_form", model, root_depth: root_depth, order: order) %>
         </div>
-        <% if can_reply? %>
-          <div id="panel-<%= reply_id %>">
-            <%== cell("decidim/comments/comment_form", model, root_depth: root_depth, order: order) %>
-          </div>
-        <% end %>
-      </div>
+      <% end %>
     </div>
     <% if has_replies_in_children? %>
       <div data-component="accordion">
         <div class="block text-center relative top-4 z-[1] -mt-8">
-          <button id="panel-trigger-<%= model.id %>-replies" class="button button__sm button__text-secondary bg-background px-2" data-controls="panel-<%= model.id %>-replies">
+          <button id="comment-trigger-<%= model.id %>-replies" class="button button__sm button__text-secondary bg-background px-2" data-controls="comment-<%= model.id %>-replies">
             <span class="font-normal"><%= t("replies", scope: "decidim.components.comment", count: replies.length) %></span>
             <%= icon "arrow-down-s-line" %>
             <%= icon "arrow-up-s-line" %>
           </button>
         </div>
-        <div class="comment-reply" id="panel-<%= model.id %>-replies">
+        <div class="comment-reply" id="comment-<%= model.id %>-replies">
           <% replies.each do |reply| %>
             <%= cell("decidim/comments/comment", reply, root_depth: root_depth, order: order, reloaded: reloaded?) %>
           <% end %>
