--- a/decidim-core/app/views/decidim/links/_modal.html.erb
+++ b/decidim-core/app/views/decidim/links/_modal.html.erb
@@ -4,7 +4,11 @@
   <h3 id="dialog-title-external-domain-warning" data-dialog-title><%= t("decidim.links.warning.title") %></h3>
   <div>
     <%= render partial: "warning" %>
-    <code class="mt-5 block"><%= highlight_domain %></code>
+    <code class="mt-5 block break-all">
+      <span><%= @url_parts[:protocol].to_s + "//" %></span>
+      <span class="text-alert"><%= @url_parts[:domain] %></span>
+      <span><%= @url_parts[:path] %></span>
+    </code>
   </div>
 </div>
 <div data-dialog-actions>
