--- a/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
@@ -51,7 +51,7 @@
     <div class="mt-8">
       <ul class="drawer-metadata__container" data-metadata-footer>
         <%= content_tag :li, resource_reference(meeting), class: "drawer-metadata__item" %>
-        <%= content_tag :li, resource_version(meeting, versions_path: meeting_version_path(meeting, meeting.versions.count)), class: "drawer-metadata__item" %>
+        <%= content_tag :li, resource_version(meeting, versions_path: meeting_version_path(meeting, meeting.versions.count), **turbo_frame_options(:meeting_frame)), class: "drawer-metadata__item" %>
       </ul>
     </div>
 
