--- a/decidim-core/app/cells/decidim/version/show.erb
+++ b/decidim-core/app/cells/decidim/version/show.erb
@@ -7,7 +7,7 @@
   <%= cell("decidim/diff", current_version, path:) %>
 </turbo-frame>
 
-<%= link_to resource_path, class: "button button__sm button__text-secondary" do %>
+<%= link_to resource_path, class: "button button__sm button__text-secondary", **html_options do %>
   <%= icon "arrow-left-line", class: "fill-current" %>
   <span><%= i18n_back_to_resource %></span>
 <% end %>
