--- a/decidim-meetings/app/views/decidim/meetings/shared/_index.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_index.html.erb
@@ -27,6 +27,8 @@
       <% end %>
     <% end %>
 
-    <%= render partial: "decidim/meetings/shared/meetings" %>
+    <div id="meetings">
+      <%= render partial: "decidim/meetings/shared/meetings" %>
+    </div>
   <% end %>
 <% end %>
