Only author can delete comment

--- a/decidim-comments/app/cells/decidim/comments/comment/utilities.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/utilities.erb
@@ -25,11 +25,13 @@
         </li>
       <% end %>
     <% end %>
-    <li>
-      <%= link_to comment_path, remote: true, method: :delete, class: "dropdown__item", data: { confirm: t("decidim.components.comment.confirm_destroy") } do %>
-        <%= icon "delete-bin-line" %>
-        <span><%= t("decidim.components.comment.delete") %></span>
-      <% end %>
-    </li>
+    <% if model.authored_by?(current_user) %>
+      <li>
+        <%= link_to comment_path, remote: true, method: :delete, class: "dropdown__item", data: { confirm: t("decidim.components.comment.confirm_destroy") } do %>
+          <%= icon "delete-bin-line" %>
+          <span><%= t("decidim.components.comment.delete") %></span>
+        <% end %>
+      </li>
+    <% end %>
   </ul>
 </details>
