--- a/decidim-comments/app/cells/decidim/comments/comment/utilities.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/utilities.erb
@@ -21,7 +21,10 @@
       <% if model.authored_by?(current_user) %>
         <%# REDESIGN_PENDING: implement the new design when a comment is edited %>
         <li class="dropdown__item">
-          <%= cell("decidim/comments/edit_comment_modal_form", model, modal_id: "editCommentModal#{model.id}") %>
+          <button type="button" class="link-alt comment__header__context-menu__content-item" data-open="<%= "editCommentModal#{model.id}" %>" title="<%= t("decidim.components.comment.edit") %>" aria-controls="<%= "editCommentModal#{model.id}" %>" aria-haspopup="dialog" tabindex="0">
+            <%= icon "pencil", class: "icon--small", aria_label: t("decidim.components.comment.edit") %>
+            <span><%= t("decidim.components.comment.edit") %></span>
+          </button>
         </li>
       <% end %>
     <% end %>
@@ -35,3 +38,9 @@
     <% end %>
   </ul>
 </details>
+
+<% unless reloaded? %>
+  <% if model.authored_by?(current_user) %>
+    <%= cell("decidim/comments/edit_comment_modal_form", model, modal_id: "editCommentModal#{model.id}") %>
+  <% end %>
+<% end %>
