toggle icons like/dislike

--- a/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/disabled_endorsements.erb
+++ b/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/disabled_endorsements.erb
@@ -1,4 +1,4 @@
 <button type="button" class="<%= button_classes %>" disabled="true">
   <%= endorse_translated %>
-  <%= icon "heart-add-line" %>
+  <%= endorse_icon %>
 </button>
