--- a/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/show.erb
+++ b/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/show.erb
@@ -12,6 +12,6 @@
         id: "endorsement_button"
       ) do %>
     <%= label %>
-    <%= icon "heart-add-line", class: "fill-current" %>
+    <%= endorse_icon %>
   <% end %>
 </div>
