--- a/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/verification_modal.erb
+++ b/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/verification_modal.erb
@@ -2,5 +2,5 @@
       data: { "dialog-open": "authorizationModal", "dialog-remote-url": modal_path(:endorse, resource) },
       class: button_classes) do %>
   <%= endorse_translated %>
-  <%= icon "heart-add-line" %>
+  <%= endorse_icon %>
 <% end %>
