--- a/decidim-comments/app/packs/stylesheets/comments.scss
+++ b/decidim-comments/app/packs/stylesheets/comments.scss
@@ -1,3 +1,13 @@
+.comments{
+  &__container{
+    @apply mt-24;
+  }
+
+  .add-comment .remaining-character-count{
+    @apply inline-block align-middle text-sm;
+  }
+}
+
 .comment{
   @apply rounded-lg border-2 border-background p-4 pl-6;
 
@@ -22,7 +32,7 @@
   }
 
   &-reply::after{
-    @apply bg-gray inline-block absolute top-8 h-5/6 w-px;
+    @apply bg-gray inline-block absolute top-8 h-4/5 w-px;
 
     content: "";
   }
@@ -147,10 +157,6 @@
 
   &-order-by{
     @apply grid grid-cols-4 mt-4 md:mt-0;
-  }
-
-  &-order-by__item{
-    @apply text-[13px] text-secondary;
   }
 
   &__actions{
