--- a/decidim-accountability/app/views/decidim/accountability/results/_linked_results.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/_linked_results.html.erb
@@ -1,9 +1,3 @@
-<div class="item-list">
-  <% resources.each do |result| %>
-    <%= link_to resource_locator(result).path, class: "item-list__content" do %>
-      <h5 class="h4 item-list__title">
-        <%= translated_attribute(result.title) %>
-      </h5>
-    <% end %>
-  <% end %>
-</div>
+<% resources.each do |result| %>
+  <%= cell "decidim/accountability/result_l", result, link_whole_card: true %>
+<% end %>
