Fix markup to enable submit button

--- a/decidim-comments/app/cells/decidim/comments/comment/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/show.erb
@@ -28,7 +28,7 @@
         <%= votes %>
       </div>
       <% if can_reply? %>
-        <div id="panel-<%= reply_id %>">
+        <div id="panel-<%= reply_id %>" class="add-comment">
           <%== cell("decidim/comments/comment_form", model, root_depth: root_depth, order: order) %>
         </div>
       <% end %>
