replace grid by flex to align and place elements

--- a/decidim-comments/app/packs/stylesheets/comments.scss
+++ b/decidim-comments/app/packs/stylesheets/comments.scss
@@ -156,7 +156,7 @@
   }
 
   &-order-by{
-    @apply grid grid-cols-4 mt-4 md:mt-0;
+    @apply ml-auto grid grid-cols-4 mt-4 md:mt-0;
   }
 
   &__actions{
