--- a/decidim-comments/app/cells/decidim/comments/comments/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comments/show.erb
@@ -1,7 +1,7 @@
 <%= content_tag :div, id: node_id, data: { decidim_comments: comments_data } do %>
   <div class="comments__container" id="comments">
     <div class="comments">
-      <div class="grid grid-cols-[max-content_1fr] gap-x-4">
+      <div class="flex items-center gap-x-2">
         <h3 class="h4">
           <% if single_comment? %>
             <%= t("decidim.components.comments.comment_details_title") %>
