--- a/decidim-comments/app/cells/decidim/comments/comments/add_comment.erb
+++ b/decidim-comments/app/cells/decidim/comments/comments/add_comment.erb
@@ -1,5 +1,23 @@
 <div class="add-comment">
   <% if user_signed_in? %>
+    <% if alignment_enabled? %>
+      <% #REDESIGN PENDING: add design for aligment %>
+      <div class="opinion-toggle button-group">
+        <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.label") %></span>
+        <button aria-pressed="false" class="button tiny button--muted opinion-toggle--ok" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.positive_selected") %>">
+          <%= icon "thumb-up", role: "img", "aria-hidden": true %>
+          <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.positive") %></span>
+        </button>
+        <button aria-pressed="true" class="button tiny button--muted opinion-toggle--meh is-active" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.neutral_selected") %>">
+          <%= t("decidim.components.add_comment_form.opinion.neutral") %>
+        </button>
+        <button aria-pressed="false" class="button tiny button--muted opinion-toggle--ko" data-selected-label="<%= t("decidim.components.add_comment_form.opinion.negative_selected") %>">
+          <%= icon "thumb-down", role: "img", "aria-hidden": true %>
+          <span class="show-for-sr"><%= t("decidim.components.add_comment_form.opinion.negative") %></span>
+        </button>
+        <div role="alert" aria-live="assertive" aria-atomic="true" class="selected-state show-for-sr"></div>
+      </div>
+    <% end %>
     <%== cell("decidim/comments/comment_form", model, root_depth: root_depth) %>
   <% else %>
     <p>
