--- a/decidim-comments/app/cells/decidim/comments/comment/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/show.erb
@@ -33,7 +33,7 @@
         </div>
       <% end %>
     </div>
-    <div id="panel-<%= model.id %>-replies">
+    <div id="comment-<%= model.id %>-replies" class="<%= 'comment-reply' if has_replies_in_children? %>">
       <% if has_replies_in_children? %>
         <%= render :replies %>
       <% end %>
