Move content of endorse button to a partial inside cell

--- a/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/disabled_endorsements.erb
+++ b/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/disabled_endorsements.erb
@@ -1,4 +1,3 @@
 <button type="button" class="<%= button_classes %>" disabled="true">
-  <%= endorse_translated %>
-  <%= endorse_icon %>
+  <%= render "button_content" %>
 </button>
