--- a/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/select_identity_button.erb
+++ b/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/select_identity_button.erb
@@ -1,7 +1,6 @@
 <div id="resource-<%= resource&.id %>-endorsement-button">
   <button id="select-identity-button" type="button" name="button" class="<%= button_classes %>" data-dialog-open="user-identities" data-dialog-remote-url="<%= reveal_identities_url %>">
-    <%= endorse_translated %>
-    <%= endorse_icon %>
+    <%= render "button_content" %>
   </button>
 
   <%= decidim_modal id: "user-identities", class: "identities-modal", remote: true %>
