--- a/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/verification_modal.erb
+++ b/decidim-core/app/cells/decidim/redesigned_endorsement_buttons/verification_modal.erb
@@ -1,6 +1,5 @@
 <%= button_to(endorsement_path(resource),
       data: { "dialog-open": "authorizationModal", "dialog-remote-url": modal_path(:endorse, resource) },
       class: button_classes) do %>
-  <%= endorse_translated %>
-  <%= endorse_icon %>
+  <%= render "button_content" %>
 <% end %>
