Define action to refresh endorse button content and endorsers list

--- a/decidim-core/app/views/decidim/endorsements/update_buttons_and_counters.js.erb
+++ b/decidim-core/app/views/decidim/endorsements/update_buttons_and_counters.js.erb
@@ -1,14 +1,15 @@
 <% render_endorsement_cell_method = redesign_enabled? ? :show : :render_user_identity_endorse_button %>
 
-<% if Decidim::UserGroups::ManageableUserGroups.for(current_user).verified.empty? %>
-  update_main_page_button();
-<% end %>
-
-<% unless redesign_enabled? %>
- update_identities_rows();
+<% if redesign_enabled? %>
+  updateEndorsementBlock();
+<% else %>
+  <% if Decidim::UserGroups::ManageableUserGroups.for(current_user).verified.empty? %>
+    update_main_page_button();
+  <% end %>
+  update_identities_rows();
 
   function update_identities_rows() {
-    <% fully_endorsed= fully_endorsed?(resource, current_user) %>
+    <% fully_endorsed = fully_endorsed?(resource, current_user) %>
     var $endorsementsRowCount = $('#resource-<%= resource.id %>-endorsements-count');
     morphdom($endorsementsRowCount[0], '<%= j(endorsement_buttons_cell(resource).render_endorsements_count).strip.html_safe %>');
     var $endorsementsRowButton = $($('#select-identity-button')[0]);
@@ -18,9 +19,22 @@
       $endorsementsRowButton.removeClass('active')
     <% end %>
   }
+
+  function update_main_page_button() {
+    var $endorsementButton = $('#resource-<%= resource.id %>-endorsement-button');
+    morphdom($endorsementButton[0], '<%= j(endorsement_buttons_cell(resource).send(render_endorsement_cell_method)).strip.html_safe %>');
+  }
 <% end %>
 
-function update_main_page_button() {
-  var $endorsementButton = $('#resource-<%= resource.id %>-endorsement-button');
-  morphdom($endorsementButton[0], '<%= j(endorsement_buttons_cell(resource).send(render_endorsement_cell_method)).strip.html_safe %>');
+function updateEndorsementBlock() {
+  var $endorsementBlock = $('#resource-<%= resource.id %>-endorsement-block');
+  var $endorsementList = $('#resource-<%= resource.id %>-endorsement-block #dropdown-trigger');
+  var $endorsementButton = $('#resource-<%= resource.id %>-endorsement-button #select-identity-button');
+
+  if ($endorsementList.length == 0) {
+    $endorsementBlock.prepend($(`<%= j(cell("decidim/endorsers_list_button", resource)).strip.html_safe %>`));
+  } else {
+    $endorsementList[0].outerHTML = '<%= j(cell("decidim/endorsers_list_button", resource)).strip.html_safe %>';
+  }
+  $endorsementButton[0].innerHTML = '<%= j(cell("decidim/redesigned_endorsement_buttons", resource).button_content).strip.html_safe %>';
 }
