--- a/decidim-core/app/views/layouts/decidim/_redesigned_application.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_application.html.erb
@@ -20,6 +20,7 @@
     <%= render partial: "decidim/shared/confirm_modal" %>
     <%= render partial: "decidim/shared/login_modal" unless current_user %>
     <%= render partial: "decidim/shared/authorization_modal" %>
-    <%= render partial: "layouts/decidim/redesigned_decidim_javascript" %>
+    <%= render partial: "layouts/decidim/redesigned_js_configuration" %>
+    <%= render partial: "layouts/decidim/cors" if Decidim.cors_enabled %>
   </body>
 </html>
