--- a/decidim-core/app/views/layouts/decidim/_redesigned_head.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_head.html.erb
@@ -26,6 +26,12 @@
 <%= apple_favicon %>
 <link rel="manifest" href="/manifest.webmanifest">
 
+<% #REDESIGN PENDING: for performance reasons defer this javacript call would be good, although there are references to jquery that need to be reviewed %>
+<%= javascript_pack_tag "redesigned_decidim_core", defer: false %>
+<%= content_for :header_snippets %>
+<%= yield :js_content %>
+<%= snippets.display(:foot) %>
+
 <%= stylesheet_pack_tag "redesigned_decidim_core", media: "all" %>
 <%= yield :css_content %>
 
