--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_layout.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_layout.scss
@@ -1,3 +1,7 @@
+.layout-container{
+  @apply flex flex-col min-h-screen [&_[data-content]]:min-h-[50vh];
+}
+
 .layout-1col{
   @apply container grid grid-cols-12;
 
