--- a/decidim-core/app/views/decidim/pages/_tabbed.html.erb
+++ b/decidim-core/app/views/decidim/pages/_tabbed.html.erb
@@ -1,7 +1,7 @@
 <%= render layout:"layouts/decidim/shared/layout_center", locals: { columns: 10 } do %>
 
     <div class="text-center py-12">
-      <h1 class="h1 decorator inline-block text-left mb-12">
+      <h1 class="h3 md:h1 decorator inline-block text-left mb-12">
         <%= title %>
       </h1>
       <p class="text-lg text-gray-2">
@@ -14,7 +14,7 @@
 
       <div class="vertical-tabs">
         <div>
-          <ul>
+          <ul class="vertical-tabs__list">
             <% pages.each do |sibling| %>
               <li class="<%= "is-active" if page == sibling %>">
                 <%= link_to translated_attribute(sibling.title), page_path(sibling.slug) %>
