--- a/decidim-core/app/views/layouts/decidim/_redesigned_wrapper.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_wrapper.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen">
+<div class="layout-container">
   <header>
     <%= render partial: "layouts/decidim/admin_links" if current_user&.admin %>
     <%= render partial: "layouts/decidim/header/redesigned_main" %>
