Remove broken links

--- a/decidim-accountability/app/views/decidim/accountability/results/_project.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/_project.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "layouts/decidim/shared/drawer" , locals: { next: "https://www..", prev: "https://www..", close_url: results_path } do %>
+<%= render layout: "layouts/decidim/shared/drawer" , locals: { close_url: results_path } do %>
   <%= cell("decidim/accountability/project", result) %>
 
   <div class="mt-8 accountability__project-actions">
