--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_map.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_map.scss
@@ -3,7 +3,7 @@
 }
 
 .static-map{
-  @apply cursor-pointer;
+  @apply cursor-pointer overflow-hidden [&_img]:w-full [&_img]:object-cover;
 
   &__container{
     @apply flex gap-4 [&>*]:w-1/2 first:[&>*]:self-center;
