--- a/decidim-debates/app/views/decidim/debates/debates/index.html.erb
+++ b/decidim-debates/app/views/decidim/debates/debates/index.html.erb
@@ -4,13 +4,13 @@
   <h1 class="h1 decorator"><%= t("decidim.components.debates.name") %></h1>
 
   <div class="columns mediumlarge-4 large-3">
-    <%= render partial: "filters_small_view" %>
     <% if current_settings.creation_enabled? && current_component.participatory_space.can_participate?(current_user) %>
-      <%= action_authorized_link_to :create, new_debate_path, class: "title-action__action button small", data: { "redirect_url" => new_debate_path } do %>
-        <%= t(".new_debate") %>
-        <%= icon "plus", role: "img", "aria-hidden": true %>
-      <% end %>
     <% end %>
+    <%= action_authorized_link_to :create, new_debate_path, class: "button button__xl button__secondary w-full", data: { "redirect_url" => new_debate_path } do %>
+      <span><%= t(".new_debate") %></span>
+      <%= icon "add-fill" %>
+    <% end %>
+    <%= render partial: "filters_small_view" %>
     <div class="card card--secondary show-for-mediumlarge">
       <%= render partial: "filters" %>
     </div>
