--- a/decidim-debates/app/views/decidim/debates/debates/index.html.erb
+++ b/decidim-debates/app/views/decidim/debates/debates/index.html.erb
@@ -3,26 +3,19 @@
 <% content_for :aside do %>
   <h1 class="h1 decorator"><%= t("decidim.components.debates.name") %></h1>
 
-  <div class="columns mediumlarge-4 large-3">
-    <% if current_settings.creation_enabled? && current_component.participatory_space.can_participate?(current_user) %>
-    <% end %>
-    <%= action_authorized_link_to :create, new_debate_path, class: "button button__xl button__secondary w-full", data: { "redirect_url" => new_debate_path } do %>
-      <span><%= t(".new_debate") %></span>
-      <%= icon "add-fill" %>
-    <% end %>
-    <%= render partial: "filters_small_view" %>
-    <div class="card card--secondary show-for-mediumlarge">
-      <%= render partial: "filters" %>
-    </div>
+  <% if current_settings.creation_enabled? && current_component.participatory_space.can_participate?(current_user) %>
+  <% end %>
+  <%= action_authorized_link_to :create, new_debate_path, class: "button button__xl button__secondary w-full", data: { "redirect_url" => new_debate_path } do %>
+    <span><%= t(".new_debate") %></span>
+    <%= icon "add-fill" %>
+  <% end %>
+  <%= render partial: "filters_small_view" %>
+  <div class="card card--secondary">
+    <%= render partial: "filters" %>
   </div>
-<% end %>
+  <% end %>
 <%= render layout: "layouts/decidim/shared/layout_two_col" do %>
-  <div class="title-action">
-    <h2 id="debates-count" class="title-action__title section-heading">
-      <%= render partial: "count" %>
-    </h2>
-  </div>
-  <div id="debates" class="columns mediumlarge-8 large-9" aria-live="polite">
+  <div id="debates" aria-live="polite">
     <%= render partial: "debates" %>
   </div>
 <% end %>
