--- a/decidim-comments/app/cells/decidim/comments/comments/order_control.erb
+++ b/decidim-comments/app/cells/decidim/comments/comments/order_control.erb
@@ -4,12 +4,9 @@
       <%= link_to(
         t("decidim.components.comment_order_selector.order.#{order_value}"),
         decidim_comments.comments_path(commentable_gid: model.to_signed_global_id.to_s, order: order_value, reload: 1),
-        class:"button button__sm button__text-secondary only:m-auto comment-order-by__item inline-block #{order_value == order ? 'underline' : '' }",
+        class:"button button__sm button__text-secondary only:m-auto comment-order-by__item inline-block #{order_value == order ? 'underline font-bold' : '' }",
         remote: true
       ) %>
-      <% if order_value == order %>
-        <%= icon "arrow-down-line", class: 'inline-block align-middle fill-secondary' %>
-      <% end %>
     </div>
   <% end %>
 </div>
