--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
@@ -45,6 +45,14 @@
   @import "stylesheets/decidim/redesigned_drawer_metadata.scss";
   @import "stylesheets/decidim/redesigned_modal.scss";
   @import "stylesheets/decidim/redesigned_modal_update.scss";
+  @import "stylesheets/decidim/redesigned_endorsers_list.scss";
+  @import "stylesheets/decidim/redesigned_address.scss";
+  @import "stylesheets/decidim/redesigned_statistics.scss";
+  @import "stylesheets/decidim/redesigned_content_blocks.scss";
+  @import "stylesheets/decidim/redesigned_documents.scss";
+  @import "stylesheets/decidim/redesigned_floating_help.scss";
+  @import "stylesheets/decidim/redesigned_cards.scss";
+  @import "stylesheets/decidim/redesigned_order-by.scss";
 }
 
 // On the other hand, the following styles match with specific routes
