add tabindex by default to titles

--- a/decidim-core/app/cells/decidim/authorization_modal/show.erb
+++ b/decidim-core/app/cells/decidim/authorization_modal/show.erb
@@ -1,6 +1,6 @@
 <div data-dialog-container>
   <%= icon "lock-line" %>
-  <h2 id="dialog-title-authorizationModal" data-dialog-title><%= title %></h2>
+  <h2 id="dialog-title-authorizationModal" tabindex="-1" data-dialog-title><%= title %></h2>
   <div>
     <div class="authorization-modal__verification-container">
       <% verifications.each do |verification| %>
