--- a/decidim-core/app/views/decidim/shared/_redesigned_share_modal.html.erb
+++ b/decidim-core/app/views/decidim/shared/_redesigned_share_modal.html.erb
@@ -1,7 +1,7 @@
 <%= decidim_modal id: "socialShare", class: "share-modal" do %>
 <div data-dialog-container>
   <%= icon "share-line" %>
-  <h2 id="dialog-title-socialShare" data-dialog-title><%= t("share", scope: "decidim.shared.share_modal") %></h2>
+  <h2 id="dialog-title-socialShare" tabindex="-1" data-dialog-title><%= t("share", scope: "decidim.shared.share_modal") %></h2>
   <div>
     <%= social_share_button_tag(decidim_page_title,
       url: decidim_meta_url,
