--- a/decidim-verifications/app/views/decidim/verifications/authorizations/renew_modal.html.erb
+++ b/decidim-verifications/app/views/decidim/verifications/authorizations/renew_modal.html.erb
@@ -1,6 +1,6 @@
 <div data-dialog-container>
   <%= icon "refresh-line" %>
-  <h3 class="h3" id="dialog-title-renew-modal" data-dialog-title>
+  <h3 class="h3" id="dialog-title-renew-modal" tabindex="-1" data-dialog-title>
     <%= t("renew_modal.title", scope: "decidim.verifications.authorizations") %>
   </h3>
   <div>
