--- a/decidim-core/app/cells/decidim/report_button/flag_modal.erb
+++ b/decidim-core/app/cells/decidim/report_button/flag_modal.erb
@@ -2,7 +2,7 @@
   <%= form_for report_form, builder:, url: decidim.report_path(sgid: model.to_sgid.to_s), method: :post, data: { turbo: false } do |f| %>
     <div data-dialog-container>
       <%= icon "flag-line" %>
-      <h2 id="dialog-title-flagModal" data-dialog-title><%= t("decidim.shared.flag_modal.title") %></h2>
+      <h2 id="dialog-title-flagModal" tabindex="-1" data-dialog-title><%= t("decidim.shared.flag_modal.title") %></h2>
       <div>
         <div class="form__wrapper flag-modal__form">
           <p id="dialog-desc-flagModal" class="flag-modal__form-description"><%= t("decidim.shared.flag_modal.description") %></p>
