--- a/decidim-core/app/views/decidim/links/_modal.html.erb
+++ b/decidim-core/app/views/decidim/links/_modal.html.erb
@@ -1,7 +1,7 @@
 <%= decidim_modal id: "external-domain-warning" do %>
 <div data-dialog-container>
   <%= icon "external-link-line" %>
-  <h2 id="dialog-title-external-domain-warning" data-dialog-title><%= t("decidim.links.warning.title") %></h2>
+  <h2 id="dialog-title-external-domain-warning" tabindex="-1" data-dialog-title><%= t("decidim.links.warning.title") %></h2>
   <div>
     <%= render partial: "warning" %>
     <code class="mt-5 block break-all">
